--- a/pages/sobre-nosotrtos.html
+++ b/pages/sobre-nosotrtos.html
@@ -4,17 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <!-- bootstrap -->
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-  <!-- estilos -->
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <!-- estilos -->
     <link rel="stylesheet" href="../styles/style.css">
-    <title>Paz prop</title>
+    <title>CM-Alquileres</title>
 
 </head>
 
 <body>
-    <header >
-       <nav class="navbar navbar-expand-lg bg-body-tertiary rounded" aria-label="Thirteenth navbar example">
+    <header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary rounded" aria-label="Thirteenth navbar example">
             <div class="container-fluid"> <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarsExample11" aria-controls="navbarsExample11" aria-expanded="false"
                     aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
@@ -22,8 +23,8 @@
                         class="navbar-brand col-lg-3 me-0" href="../index.html"> <img src="../assets/logo.chico.png"
                             alt="logo" /></a>
                     <ul class="navbar-nav col-lg-6 justify-content-lg-center">
-                        <li class="nav-item"> <a class="nav-link " aria-current="page"
-                                href="../index.html">Inicio</a></li>
+                        <li class="nav-item"> <a class="nav-link " aria-current="page" href="../index.html">Inicio</a>
+                        </li>
                         <li class="nav-item"> <a class="nav-link" href="./alquileres.html">Alquileres</a></li>
                         <li class="nav-item"> <a class="nav-link" href="./contacto.html">Contacto</a></li>
                         <li class="nav-item"> <a class="nav-link" href="./preguntas-precuentes.html">Preguntas
@@ -31,32 +32,32 @@
                         <li class="nav-item"> <a class="nav-link active" href="./sobre-nosotrtos.html">Sobres
                                 nosotros</a></li>
                     </ul>
-                  
+
                 </div>
             </div>
         </nav>
     </header>
 
     <main>
-        <section>
+        <section class="titulo-sn">
             <h1>Conoce nuestra historia</h1>
         </section>
 
-        <section>
+        <section class="subtitulo-sn">
             <h2>Así empezamos</h2>
-            <div>
+            <div class="texto-sn">
                 <p>Comenzamos como un pequeño equipo con grandes sueños y hoy seguimos creciendo con la misma pasión.
                 </p>
             </div>
         </section>
 
-        <section>
+        <section class="subtitulo-sn">
             <h2>Nuestros proyectos</h2>
 
 
 
-            
-            <div>
+
+            <div class="texto-sn">
                 <p>Contamos con profesionales de distintas áreas que trabajan en conjunto para lograr los mejores
                     resultados.</p>
             </div>
@@ -88,8 +89,10 @@
             </ul>
         </div>
     </footer>
-      <!-- script bootstrap -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <!-- script bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous">
+    </script>
 
 </body>
 
