agrege el resposive para tables y celular en todas las paginas

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -42,7 +42,7 @@
         </div>
         <!-- card Formulario -->
         <section>
-            <form class="row g-3 justify-content-center">
+            <form class="row g-3 justify-content-center w-100">
                 <div class="col-12 col-md-5">
                     <label for="input-nombre" class="form-label">Nombre y Apellido:</label>
                     <input type="text" class="form-control" id="input-nombre" name="nombre" placeholder="John Doe"
