agrege animaciones en indez y alquileres

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <!-- estilos -->
     <link rel="stylesheet" href="./styles/style.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>CM Alquileres</title>
 </head>
 
@@ -84,7 +85,7 @@
                 práctico y bien ubicado.</p>
         </section>
 
-        <div class="card-grid item-grid-contenedor-depto-uno">
+        <div class="card-grid item-grid-contenedor-depto-uno" data-aos="fade-down">
             <h3>Departamento 1</h3>
             <div>
                 <img src="./assets/departamento-1/PresentacionDepto1.jpg" alt="vista de la cocina del depto uno" />
@@ -94,7 +95,7 @@
             </div>
         </div>
 
-        <div class="card-grid item-grid-contenedor-depto-dos">
+        <div class="card-grid item-grid-contenedor-depto-dos" data-aos="fade-down">
             <h3>Departamento 2</h3>
             <div>
                 <img src="./assets/departamento-2/PresentacionDepto2.jpg"
@@ -105,7 +106,7 @@
             </div>
         </div>
 
-        <div class="card-grid item-grid-contenedor-depto-tres">
+        <div class="card-grid item-grid-contenedor-depto-tres" data-aos="fade-down">
             <h3>Departamento 3</h3>
             <div>
                 <img src="./assets/departamento-3/PresentacionDepto3.jpg"
@@ -144,6 +145,10 @@
     <!-- script bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous">
+    </script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
     </script>
 </body>
 
