--- a/pages/alquileres.html
+++ b/pages/alquileres.html
@@ -9,6 +9,10 @@
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   <!-- estilos -->
   <link rel="stylesheet" href="../styles/style.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
   <title>CM Aalquileres</title>
 </head>
 
@@ -62,7 +66,7 @@
 
         <div class="row g-4">
           <!-- Card 1 -->
-          <div class="col-12 col-sm-6 col-lg-4">
+          <div class="col-12 col-sm-6 col-lg-4 animate__animated animate__pulse">
             <article class="card card-alquiler h-100">
               <img class="card-img-top" src="../assets/departamento-1/PresentacionDepto1.jpg"
                 alt="Cocina y comedor del Departamento 1">
@@ -77,7 +81,7 @@
           </div>
 
           <!-- Card 2 -->
-          <div class="col-12 col-sm-6 col-lg-4">
+          <div class="col-12 col-sm-6 col-lg-4 animate__animated animate__pulse">
             <article class="card card-alquiler h-100">
               <img class="card-img-top" src="../assets/departamento-2/PresentacionDepto2.jpg"
                 alt="Vista del dormitorio y cocina del Departamento 2">
@@ -92,7 +96,7 @@
           </div>
 
           <!-- Card 3 -->
-          <div class="col-12 col-sm-6 col-lg-4">
+          <div class="col-12 col-sm-6 col-lg-4 animate__animated animate__pulse">
             <article class="card card-alquiler h-100">
               <img class="card-img-top" src="../assets/departamento-3/PresentacionDepto3.jpg"
                 alt="Comedor hacia cocina y baño del Departamento 3">
