--- a/pages/sobre-nosotrtos.html
+++ b/pages/sobre-nosotrtos.html
@@ -4,33 +4,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+
     <!-- estilos -->
     <link rel="stylesheet" href="../styles/style.css">
-    <title>CM-Alquileres</title>
 
+    <title>CM-Alquileres · Sobre nosotros</title>
 </head>
 
 <body>
+
+    <!-- NAVBAR -->
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary rounded" aria-label="Thirteenth navbar example">
-            <div class="container-fluid"> <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+        <nav class="navbar navbar-expand-lg bg-body-tertiary rounded">
+            <div class="container-fluid">
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarsExample11" aria-controls="navbarsExample11" aria-expanded="false"
-                    aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
-                <div class="collapse navbar-collapse d-lg-flex mt-2" id="navbarsExample11"> <a
-                        class="navbar-brand col-lg-3 me-0" href="../index.html"> <img src="../assets/logo.chico.png"
-                            alt="logo" /></a>
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse d-lg-flex mt-2" id="navbarsExample11">
+                    <a class="navbar-brand col-lg-3 me-0" href="../index.html">
+                        <img src="../assets/logo.chico.png" alt="logo">
+                    </a>
+
                     <ul class="navbar-nav col-lg-6 justify-content-lg-center">
-                        <li class="nav-item"> <a class="nav-link " aria-current="page" href="../index.html">Inicio</a>
-                        </li>
-                        <li class="nav-item"> <a class="nav-link" href="./alquileres.html">Alquileres</a></li>
-                        <li class="nav-item"> <a class="nav-link" href="./contacto.html">Contacto</a></li>
-                        <li class="nav-item"> <a class="nav-link" href="./preguntas-precuentes.html">Preguntas
-                                frecuentes</a></li>
-                        <li class="nav-item"> <a class="nav-link active" href="./sobre-nosotrtos.html">Sobres
-                                nosotros</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./alquileres.html">Alquileres</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./preguntas-precuentes.html">Preguntas frecuentes</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="./sobre-nosotrtos.html">Sobre nosotros</a></li>
                     </ul>
 
                 </div>
@@ -38,49 +46,249 @@
         </nav>
     </header>
 
-    <main>
-        <section class="titulo-sn">
-            <h1>Conoce nuestra historia</h1>
-        </section>
 
-        <section class="subtitulo-sn">
-            <h2>Así empezamos</h2>
-            <div class="texto-sn">
-                <p>Comenzamos como un pequeño equipo con grandes sueños y hoy seguimos creciendo con la misma pasión.
-                </p>
+    <!-- MAIN -->
+    <main class="main">
+
+        <!-- Hero Sobre Nosotros -->
+        <section class="section about-hero">
+            <div class="grid-2 section--bg-white">
+
+                <div>
+                    <div class="about-hero__badge">
+                        Sobre nosotros · Alquileres con confianza
+                    </div>
+
+                    <h1 class="about-hero__title">
+                        Administramos alquileres como si viviéramos en cada propiedad.
+                    </h1>
+
+                    <p class="about-hero__text">
+                        Nacimos para resolver lo que todos odiamos de los alquileres: trámites eternos,
+                        información poco clara y falta de respuesta. Hoy gestionamos propiedades con un modelo
+                        simple, transparente y humano, cuidando tanto al inquilino como al propietario.
+                    </p>
+
+                    <div class="about-hero__highlights">
+                        <span class="chip">+5 años administrando alquileres</span>
+                        <span class="chip">Procesos claros y digitales</span>
+                        <span class="chip">Atención personalizada</span>
+                    </div>
+
+                    <button class="btn btn--primary" onclick="window.location.href='contacto.html'">
+                        Hablar con nuestro equipo
+                    </button>
+                </div>
+
+                <div class="about-hero__image">
+                    <p style="font-size:0.9rem; opacity:0.85; margin-bottom:10px;">
+                        “Un alquiler no es solo un contrato, es el lugar donde vas a vivir tu día a día.”
+                    </p>
+
+                    <div class="about-hero__stats">
+                        <div class="about-hero__stat">
+                            <strong>+30</strong> Propiedades en administración
+                        </div>
+                        <div class="about-hero__stat">
+                            <strong>90%</strong> Ocupación promedio
+                        </div>
+                        <div class="about-hero__stat">
+                            <strong>24 hs</strong> Tiempo promedio de respuesta
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </section>
 
-        <section class="subtitulo-sn">
-            <h2>Nuestros proyectos</h2>
+
+        <!-- Qué nos diferencia -->
+        <section class="section section--bg-white">
+            <h2 class="section__title">¿Qué nos diferencia?</h2>
+
+            <p class="section__subtitle">
+                No hacemos magia, hacemos las cosas bien: procesos prolijos, respuesta rápida y cero letras chicas.
+            </p>
+
+            <ul class="bullets">
+                <li>Contratos claros, sin cláusulas confusas ni costos escondidos.</li>
+                <li>Gestión digital de documentación para evitar idas y vueltas innecesarias.</li>
+                <li>Seguimiento de mantenimiento para cuidar tanto la propiedad como al inquilino.</li>
+                <li>Comunicación directa: hablamos claro, por WhatsApp, mail o llamada.</li>
+                <li>Asistencia durante todo el alquiler, no solo al momento de firmar.</li>
+            </ul>
+        </section>
 
 
+        <!-- Equipo -->
+        <section class="section">
+            <h2 class="section__title">Nuestro equipo</h2>
+            <p class="section__subtitle">
+                Somos un equipo chico, pero muy encima de cada detalle. Preferimos pocos clientes
+                bien atendidos antes que crecer sin control.
+            </p>
+        </section>
 
+        <!-- Carrusel Bootstrap -->
+        <div id="carouselExampleCaptions" class="carousel slide">
+
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+
+            <div class="carousel-inner">
+
+                <div class="carousel-item active">
+                    <img src="../assets/trabajadores/ximena.jpg" class="d-block w-100"
+                        alt="Mujer joven pelo castaño con gran sonrisa">
+
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Ximena</h5>
+                        <p>Atención al cliente.</p>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <img src="../assets/trabajadores/andres.jpg" class="d-block w-100"
+                        alt="Hombre adulto sin barba con cabello corto castaño">
+
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Andres</h5>
+                        <p>Administración.</p>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <img src="../assets/trabajadores/jorge.jpg" class="d-block w-100"
+                        alt="Hombre adulto con calvicie y lentes">
+
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Jorge</h5>
+                        <p>Gestión de propiedades.</p>
+                    </div>
+                </div>
+
+            </div>
+
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Anterior</span>
+            </button>
+
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Siguiente</span>
+            </button>
+
+        </div>
+
+
+        <!-- Zonas y propietarios -->
+        <section class="section section--bg-white">
+
+            <div class="owners">
+
+                <div>
+                    <h2 class="section__title">Zonas donde trabajamos</h2>
+
+                    <p class="section__subtitle">
+                        Conocemos la zona, sus tiempos, sus calles y su gente. Eso nos ayuda a conectar rápido
+                        propiedades con personas.
+                    </p>
+
+                    <div class="zones">
+                        <ul>
+                            <li class="zones__item">José C. Paz</li>
+                            <li class="zones__item">San Miguel</li>
+                            <li class="zones__item">Malvinas Argentinas</li>
+                            <li class="zones__item">Grand Bourg</li>
+                            <li class="zones__item">Tortuguitas</li>
+                            <li class="zones__item">Otras zonas a consultar</li>
+                        </ul>
+                    </div>
+                </div>
+
+
+                <div class="owners__box">
+                    <h3 style="margin-bottom:6px;">Propietarios: administramos por vos</h3>
+
+                    <p>
+                        Si tenés una propiedad y no querés estar detrás de los cobros, reclamos, contratos o
+                        publicaciones, nosotros nos ocupamos.
+                    </p>
+
+                    <ul class="owners__list">
+                        <li>Publicación y difusión de la propiedad.</li>
+                        <li>Selección y filtrado de inquilinos.</li>
+                        <li>Gestión de contratos y actualizaciones.</li>
+                        <li>Cobro de alquileres y reportes claros.</li>
+                        <li>Seguimiento de mantenimiento y estado general.</li>
+                    </ul>
+                </div>
+
+            </div>
+        </section>
+
+
+        <!-- CTA final -->
+        <section class="section cta">
+            <h2 class="cta__title">
+                ¿Buscás tu próximo alquiler o querés que administremos tu propiedad?
+            </h2>
+
+            <p class="cta__text">
+                Contanos qué necesitás y te respondemos a la brevedad con opciones claras, tiempos y próximos pasos.
+            </p>
+
+            <div class="cta__actions">
+                <button class="btn btn--primary" onclick="window.location.href='./contacto.html'">
+                    Quiero hacer una consulta
+                </button>
+
+                <button class="btn btn--outline" onclick="window.location.href='./alquileres.html'">
+                    Ver propiedades disponibles
+                </button>
+            </div>
 
             <div class="texto-sn">
                 <p>Contamos con profesionales de distintas áreas que trabajan en conjunto para lograr los mejores
                     resultados.</p>
             </div>
         </section>
+
     </main>
 
+
+    <!-- FOOTER -->
     <footer class="footer">
-        <span>Dererechos reservados por autor</span>
+        <span>Derechos reservados por autor</span>
         <span>Creado por Carolina Gonzalo</span>
+
         <div class="contenedor-links">
             <p>Links a redes</p>
+
             <ul>
                 <li>
                     <a href="https://www.instagram.com/" target="_blank">
                         <img src="../assets/icon-instagram.png" alt="Instagram">
                     </a>
-
                 </li>
+
                 <li>
                     <a href="https://www.Facebook.com" target="_blank">
                         <img src="../assets/icon-facebook.png" alt="Facebook">
                     </a>
                 </li>
+
                 <li>
                     <a href="#" target="_blank">
                         <img src="../assets/icon-email.png" alt="Email">
@@ -89,7 +297,9 @@
             </ul>
         </div>
     </footer>
-    <!-- script bootstrap -->
+
+
+    <!-- bootstrap scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous">
     </script>
