agrege SEO en todas las paginas

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <!-- estilos -->
     <link rel="stylesheet" href="./styles/style.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <title>CM Alquileres</title>
+    <!-- SEO -->
+    <title>CM Alquileres - Inicio</title>
+    <meta name="description" content="Departamentos confortables, precios accesibles y atención personalizada en José C. Paz. Encontrá tu próximo hogar con nosotros.">
+    <meta name="keywords" content="Alquileres en José C. Paz, Departamentos en alquiler, Alquileres económicos, Alquiler seguro, Inmobiliaria José C. Paz, Alquileres particulares, Departamentos disponibles">
+    <meta name="author" content="Carolina Gonalo">
+    <meta name="owner" content="Carolina Gonalo">
 </head>
 
 <body>
@@ -21,7 +26,7 @@
                     aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
                 <div class="collapse navbar-collapse d-lg-flex mt-2" id="navbarsExample11"> <a
                         class="navbar-brand col-lg-3 me-0" href="./index.html"> <img src="./assets/logo.chico.png"
-                            alt="logo" /></a>
+                            alt="logo con estructura de casa en colores azul y gris abajo tiene escrito CM Alquileres" /></a>
                     <ul class="navbar-nav col-lg-6 justify-content-lg-center">
                         <li class="nav-item"> <a class="nav-link active" aria-current="page"
                                 href="./index.html">Inicio</a></li>
@@ -126,17 +131,17 @@
             <ul>
                 <li>
                     <a href="https://www.instagram.com/" target="_blank" rel="noopener">
-                        <img src="./assets/icon-instagram.png" alt="Instagram" />
+                        <img src="./assets/icon-instagram.png" alt="logo de instagram" />
                     </a>
                 </li>
                 <li>
                     <a href="https://www.Facebook.com" target="_blank" rel="noopener">
-                        <img src="./assets/icon-facebook.png" alt="Facebook" />
+                        <img src="./assets/icon-facebook.png" alt="logo de facebook" />
                     </a>
                 </li>
                 <li>
                     <a href="#" target="_blank" rel="noopener">
-                        <img src="./assets/icon-email.png" alt="Email" />
+                        <img src="./assets/icon-email.png" alt="logo de email" />
                     </a>
                 </li>
             </ul>
