--- a/pages/alquileres.html
+++ b/pages/alquileres.html
@@ -11,10 +11,14 @@
   <link rel="stylesheet" href="../styles/style.css">
     <link
     rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
-  <title>CM Aalquileres</title>
-</head>
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+  <!-- SEO -->
+  <title>CM Aalquileres - Alquileres</title>
+    <meta name="description" content="Explorá nuestros departamentos disponibles en José C. Paz. Opciones para todas las necesidades, con gestión segura y rápida.">
+    <meta name="keywords" content="Departamentos en alquiler José C. Paz, Alquiler de monoambientes, Alquiler de 2 ambientes, Alquiler temporario José C. Paz, Alquiler sin garantía propietaria, Alquiler directo, Propiedades disponibles">
+    <meta name="author" content="Carolina Gonzalo">
+    <meta name="owner" content="Carolina Gonalo">
+    </head>
 
 <body>
   <header>
@@ -24,7 +28,7 @@
           aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
         <div class="collapse navbar-collapse d-lg-flex mt-2" id="navbarsExample11"> <a
             class="navbar-brand col-lg-3 me-0" href="../index.html"> <img src="../assets/logo.chico.png"
-              alt="logo" /></a>
+              alt="logo con estructura de casa en colores azul y gris, abajo dice Cm Alquileres" /></a>
           <ul class="navbar-nav col-lg-6 justify-content-lg-center">
             <li class="nav-item"> <a class="nav-link " aria-current="page" href="../index.html">Inicio</a></li>
             <li class="nav-item"> <a class="nav-link active" href="./alquileres.html">Alquileres</a></li>
@@ -69,7 +73,7 @@
           <div class="col-12 col-sm-6 col-lg-4 animate__animated animate__pulse">
             <article class="card card-alquiler h-100">
               <img class="card-img-top" src="../assets/departamento-1/PresentacionDepto1.jpg"
-                alt="Cocina y comedor del Departamento 1">
+                alt="vista cocina y comedor del Departamento 1">
               <div class="card-body d-flex flex-column">
                 <h3 class="h5 card-title">Departamento 1</h3>
                 <p class="card-text small text-muted mb-4">
@@ -99,7 +103,7 @@
           <div class="col-12 col-sm-6 col-lg-4 animate__animated animate__pulse">
             <article class="card card-alquiler h-100">
               <img class="card-img-top" src="../assets/departamento-3/PresentacionDepto3.jpg"
-                alt="Comedor hacia cocina y baño del Departamento 3">
+                alt="vista del comedor hacia cocina y baño del Departamento 3">
               <div class="card-body d-flex flex-column">
                 <h3 class="h5 card-title">Departamento 3</h3>
                 <p class="card-text small text-muted mb-4">
@@ -244,18 +248,18 @@
       <ul>
         <li>
           <a href="https://www.instagram.com/" target="_blank">
-            <img src="../assets/icon-instagram.png" alt="Instagram">
+            <img src="../assets/icon-instagram.png" alt="logo de instagram">
           </a>
 
         </li>
         <li>
           <a href="https://www.Facebook.com" target="_blank">
-            <img src="../assets/icon-facebook.png" alt="Facebook">
+            <img src="../assets/icon-facebook.png" alt="logo de facebook">
           </a>
         </li>
         <li>
           <a href="#" target="_blank">
-            <img src="../assets/icon-email.png" alt="Email">
+            <img src="../assets/icon-email.png" alt="logo de email">
           </a>
         </li>
       </ul>
