--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,7 +9,12 @@
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <!-- estilos -->
     <link rel="stylesheet" href="../styles/style.css">
-    <title>CM Alquileres</title>
+    <!-- SEO -->
+    <title>CM Alquileres - Contacto</title>
+    <meta name="description" content="Contactate con nosotros. Respondemos rápido y te asesoramos para encontrar el alquiler ideal según tus necesidades.">
+    <meta name="keywords" content="Contacto CM Alquileres, Consultar por alquiler, Solicitar disponibilidad, Contacto inmobiliario, Información de alquileres, Reservar departamento, Atención al inquilino">
+    <meta name="author" content="Carolina Gonzalo">
+    <meta name="owner" content="Carolina Gonalo">
 </head>
 
 <body>
@@ -20,7 +25,7 @@
                     aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
                 <div class="collapse navbar-collapse d-lg-flex mt-2" id="navbarsExample11"> <a
                         class="navbar-brand col-lg-3 me-0" href="../index.html"> <img src="../assets/logo.chico.png"
-                            alt="logo" /></a>
+                            alt="logo con estructura de casa en colores azul y gris, abajo dice CM Alquileres" /></a>
                     <ul class="navbar-nav col-lg-6 justify-content-lg-center">
                         <li class="nav-item"> <a class="nav-link " aria-current="page" href="../index.html">Inicio</a>
                         </li>
@@ -90,17 +95,17 @@
             <ul>
                 <li>
                     <a href="https://www.instagram.com/" target="_blank">
-                        <img src="../assets/icon-instagram.png" alt="Instagram">
+                        <img src="../assets/icon-instagram.png" alt="logo de instagram">
                     </a>
                 </li>
                 <li>
                     <a href="https://www.Facebook.com" target="_blank">
-                        <img src="../assets/icon-facebook.png" alt="Facebook">
+                        <img src="../assets/icon-facebook.png" alt="logo de facebook">
                     </a>
                 </li>
                 <li>
                     <a href="#" target="_blank">
-                        <img src="../assets/icon-email.png" alt="Email">
+                        <img src="../assets/icon-email.png" alt="logo de email">
                     </a>
                 </li>
             </ul>
