--- a/pages/preguntas-precuentes.html
+++ b/pages/preguntas-precuentes.html
@@ -9,7 +9,12 @@
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <!-- estilos -->
     <link rel="stylesheet" href="../styles/style.css">
-    <title>CM Alquileres</title>
+    <!-- SEO -->
+    <title>CM Alquileres - Preguntas frecuentes</title>
+    <meta name="description" content="Respondemos las dudas más comunes sobre alquileres, requisitos, pagos y reservas. Información clara para que alquiles con confianza.">
+    <meta name="keywords" content="Dudas sobre alquileres, Requisitos para alquilar, Preguntas frecuentes alquiler, Garantías y contratos, Pagos de alquiler, Alquiler sin complicaciones, Asesoramiento para inquilinos">
+    <meta name="author" content="Carolina Gonzalo">
+    <meta name="owner" content="Carolina Gonzalo">
 </head>
 
 <body>
@@ -20,7 +25,7 @@
                     aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
                 <div class="collapse navbar-collapse d-lg-flex mt-2" id="navbarsExample11"> <a
                         class="navbar-brand col-lg-3 me-0" href="../index.html"> <img src="../assets/logo.chico.png"
-                            alt="logo" /></a>
+                            alt="logo con estructura de casa en colores azul y gris abajo dice CM Alquileres" /></a>
                     <ul class="navbar-nav col-lg-6 justify-content-lg-center">
                         <li class="nav-item"> <a class="nav-link " aria-current="page" href="../index.html">Inicio</a>
                         </li>
@@ -197,17 +202,17 @@
             <ul>
                 <li>
                     <a href="https://www.instagram.com/" target="_blank">
-                        <img src="../assets/icon-instagram.png" alt="Instagram">
+                        <img src="../assets/icon-instagram.png" alt="logo de instagram">
                     </a>
                 </li>
                 <li>
                     <a href="https://www.Facebook.com" target="_blank">
-                        <img src="../assets/icon-facebook.png" alt="Facebook">
+                        <img src="../assets/icon-facebook.png" alt="logo de facebook">
                     </a>
                 </li>
                 <li>
                     <a href="#" target="_blank">
-                        <img src="../assets/icon-email.png" alt="Email">
+                        <img src="../assets/icon-email.png" alt="logo de email">
                     </a>
                 </li>
             </ul>
