--- a/pages/sobre-nosotrtos.html
+++ b/pages/sobre-nosotrtos.html
@@ -4,15 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-
     <!-- estilos -->
     <link rel="stylesheet" href="../styles/style.css">
-
-    <title>CM-Alquileres · Sobre nosotros</title>
+    <!-- SEO -->
+    <title>CM-Alquileres - Sobre nosotros</title>
+    <meta name="description" content="Gestión transparente, atención humana y experiencia en alquileres en José C. Paz. Trabajamos para tu tranquilidad.">
+    <meta name="keywords" content="CM Alquileres equipo, Inmobiliaria familiar, Alquileres confiables, Administración de propiedades, Experiencia en alquileres, Atención personalizada, Alquileres en zona norte">
+    <meta name="author" content="Carolina Gonzalo">
+    <meta name="owner" content="Carolina Gonzalo">
 </head>
 
 <body>
@@ -30,7 +32,7 @@
 
                 <div class="collapse navbar-collapse d-lg-flex mt-2" id="navbarsExample11">
                     <a class="navbar-brand col-lg-3 me-0" href="../index.html">
-                        <img src="../assets/logo.chico.png" alt="logo">
+                        <img src="../assets/logo.chico.png" alt="logo con estructura de casa en colores azul y gris abajo dice CM Alquileres">
                     </a>
 
                     <ul class="navbar-nav col-lg-6 justify-content-lg-center">
@@ -279,19 +281,19 @@
             <ul>
                 <li>
                     <a href="https://www.instagram.com/" target="_blank">
-                        <img src="../assets/icon-instagram.png" alt="Instagram">
+                        <img src="../assets/icon-instagram.png" alt="logo de instagram">
                     </a>
                 </li>
 
                 <li>
                     <a href="https://www.Facebook.com" target="_blank">
-                        <img src="../assets/icon-facebook.png" alt="Facebook">
+                        <img src="../assets/icon-facebook.png" alt="logo de facebook">
                     </a>
                 </li>
 
                 <li>
                     <a href="#" target="_blank">
-                        <img src="../assets/icon-email.png" alt="Email">
+                        <img src="../assets/icon-email.png" alt="logo de email">
                     </a>
                 </li>
             </ul>
