Agrege meta de open graph en todas las paginas

--- a/pages/alquileres.html
+++ b/pages/alquileres.html
@@ -4,6 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO -->
+  <title>CM Aalquileres - Alquileres</title>
+    <meta name="description" content="Explorá nuestros departamentos disponibles en José C. Paz. Opciones para todas las necesidades, con gestión segura y rápida.">
+    <meta name="keywords" content="Departamentos en alquiler José C. Paz, Alquiler de monoambientes, Alquiler de 2 ambientes, Alquiler temporario José C. Paz, Alquiler sin garantía propietaria, Alquiler directo, Propiedades disponibles">
+    <meta name="author" content="Carolina Gonzalo">
+    <meta name="owner" content="Carolina Gonalo">
+  <!-- OG -->
+    <meta property="og:title" content="CM Alquileres - Alquileres">
+    <meta property="og:image" content="https://github.com/CarolinaGonzalo/CM-Alquileres/blob/main/assets/logo.chico.png">
+    <meta property="og:url" content="https://cm-alquileres.vercel.app/pages/alquileres.html">
+    <meta property="og:description" content="Departamentos en alquiler José C. Paz, Alquiler de monoambientes, Alquiler de 2 ambientes, Alquiler temporario José C. Paz, Alquiler sin garantía propietaria, Alquiler directo, Propiedades disponibles">
   <!-- bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
