--- a/pages/sobre-nosotrtos.html
+++ b/pages/sobre-nosotrtos.html
@@ -4,17 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <!-- estilos -->
-    <link rel="stylesheet" href="../styles/style.css">
     <!-- SEO -->
     <title>CM-Alquileres - Sobre nosotros</title>
     <meta name="description" content="Gestión transparente, atención humana y experiencia en alquileres en José C. Paz. Trabajamos para tu tranquilidad.">
     <meta name="keywords" content="CM Alquileres equipo, Inmobiliaria familiar, Alquileres confiables, Administración de propiedades, Experiencia en alquileres, Atención personalizada, Alquileres en zona norte">
     <meta name="author" content="Carolina Gonzalo">
     <meta name="owner" content="Carolina Gonzalo">
+    <!-- OG -->
+    <meta property="og:title" content="CM Alquileres - Sobre nosotros">
+    <meta property="og:image" content="https://github.com/CarolinaGonzalo/CM-Alquileres/blob/main/assets/logo.chico.png">
+    <meta property="og:url" content="https://cm-alquileres.vercel.app/pages/sobre-nosotrtos.html">
+    <meta property="og:description" content="Gestión transparente, atención humana y experiencia en alquileres en José C. Paz. Trabajamos para tu tranquilidad.">
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <!-- estilos -->
+    <link rel="stylesheet" href="../styles/style.css">
+    
 </head>
 
 <body>
