--- a/index.html
+++ b/index.html
@@ -4,18 +4,23 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- SEO -->
+    <title>CM Alquileres - Inicio</title>
+    <meta name="description" content="Departamentos confortables, precios accesibles y atención personalizada en José C. Paz. Encontrá tu próximo hogar con nosotros.">
+    <meta name="keywords" content="Alquileres en José C. Paz, Departamentos en alquiler, Alquileres económicos, Alquiler seguro, Inmobiliaria José C. Paz, Alquileres particulares, Departamentos disponibles">
+    <meta name="author" content="Carolina Gonalo">
+    <meta name="owner" content="Carolina Gonalo">
+    <!-- OG -->
+    <meta property="og:title" content="CM Alquileres - Inicio">
+    <meta property="og:image" content="https://github.com/CarolinaGonzalo/CM-Alquileres/blob/main/assets/logo.chico.png">
+    <meta property="og:url" content="https://cm-alquileres.vercel.app/index.html">
+    <meta property="og:description" content="Departamentos confortables, precios accesibles y atención personalizada en José C. Paz. Encontrá tu próximo hogar con nosotros.">
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <!-- estilos -->
     <link rel="stylesheet" href="./styles/style.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <!-- SEO -->
-    <title>CM Alquileres - Inicio</title>
-    <meta name="description" content="Departamentos confortables, precios accesibles y atención personalizada en José C. Paz. Encontrá tu próximo hogar con nosotros.">
-    <meta name="keywords" content="Alquileres en José C. Paz, Departamentos en alquiler, Alquileres económicos, Alquiler seguro, Inmobiliaria José C. Paz, Alquileres particulares, Departamentos disponibles">
-    <meta name="author" content="Carolina Gonalo">
-    <meta name="owner" content="Carolina Gonalo">
 </head>
 
 <body>
