--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,17 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <!-- estilos -->
-    <link rel="stylesheet" href="../styles/style.css">
     <!-- SEO -->
     <title>CM Alquileres - Contacto</title>
     <meta name="description" content="Contactate con nosotros. Respondemos rápido y te asesoramos para encontrar el alquiler ideal según tus necesidades.">
     <meta name="keywords" content="Contacto CM Alquileres, Consultar por alquiler, Solicitar disponibilidad, Contacto inmobiliario, Información de alquileres, Reservar departamento, Atención al inquilino">
     <meta name="author" content="Carolina Gonzalo">
     <meta name="owner" content="Carolina Gonalo">
+    <!-- OG -->
+    <meta property="og:title" content="CM Alquileres - Contacto">
+    <meta property="og:image" content="https://github.com/CarolinaGonzalo/CM-Alquileres/blob/main/assets/logo.chico.png">
+    <meta property="og:url" content="https://cm-alquileres.vercel.app/pages/contacto.html">
+    <meta property="og:description" content="Contactate con nosotros. Respondemos rápido y te asesoramos para encontrar el alquiler ideal según tus necesidades.">
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <!-- estilos -->
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 
 <body>
