--- a/pages/preguntas-frecuentes.html
+++ b/pages/preguntas-frecuentes.html
@@ -4,17 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <!-- estilos -->
-    <link rel="stylesheet" href="../styles/style.css">
     <!-- SEO -->
     <title>CM Alquileres - Preguntas frecuentes</title>
     <meta name="description" content="Respondemos las dudas más comunes sobre alquileres, requisitos, pagos y reservas. Información clara para que alquiles con confianza.">
     <meta name="keywords" content="Dudas sobre alquileres, Requisitos para alquilar, Preguntas frecuentes alquiler, Garantías y contratos, Pagos de alquiler, Alquiler sin complicaciones, Asesoramiento para inquilinos">
     <meta name="author" content="Carolina Gonzalo">
     <meta name="owner" content="Carolina Gonzalo">
+    <!-- OG -->
+    <meta property="og:title" content="CM Alquileres - Preguntas frecuentes">
+    <meta property="og:image" content="https://github.com/CarolinaGonzalo/CM-Alquileres/blob/main/assets/logo.chico.png">
+    <meta property="og:url" content="https://cm-alquileres.vercel.app/pages/preguntas-precuentes.html">
+    <meta property="og:description" content="Respondemos las dudas más comunes sobre alquileres, requisitos, pagos y reservas. Información clara para que alquiles con confianza.">
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <!-- estilos -->
+    <link rel="stylesheet" href="../styles/style.css">
+    
 </head>
 
 <body>
