Modifique las imagenes de meta de open graph

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -12,7 +12,7 @@
     <meta name="owner" content="Carolina Gonalo">
     <!-- OG -->
     <meta property="og:title" content="CM Alquileres - Contacto">
-    <meta property="og:image" content="https://github.com/CarolinaGonzalo/CM-Alquileres/blob/main/assets/logo.chico.png">
+    <meta property="og:image" content="https://github.com/CarolinaGonzalo/CM-Alquileres/blob/main/assets/capturaontacto.png">
     <meta property="og:url" content="https://cm-alquileres.vercel.app/pages/contacto.html">
     <meta property="og:description" content="Contactate con nosotros. Respondemos rápido y te asesoramos para encontrar el alquiler ideal según tus necesidades.">
     <!-- bootstrap -->
