--- a/pages/preguntas-frecuentes.html
+++ b/pages/preguntas-frecuentes.html
@@ -12,7 +12,7 @@
     <meta name="owner" content="Carolina Gonzalo">
     <!-- OG -->
     <meta property="og:title" content="CM Alquileres - Preguntas frecuentes">
-    <meta property="og:image" content="https://github.com/CarolinaGonzalo/CM-Alquileres/blob/main/assets/logo.chico.png">
+    <meta property="og:image" content="https://github.com/CarolinaGonzalo/CM-Alquileres/blob/main/assets/capturaFaq.png">
     <meta property="og:url" content="https://cm-alquileres.vercel.app/pages/preguntas-precuentes.html">
     <meta property="og:description" content="Respondemos las dudas más comunes sobre alquileres, requisitos, pagos y reservas. Información clara para que alquiles con confianza.">
     <!-- bootstrap -->
