--- a/pages/sobre-nosotrtos.html
+++ b/pages/sobre-nosotrtos.html
@@ -12,7 +12,7 @@
     <meta name="owner" content="Carolina Gonzalo">
     <!-- OG -->
     <meta property="og:title" content="CM Alquileres - Sobre nosotros">
-    <meta property="og:image" content="https://github.com/CarolinaGonzalo/CM-Alquileres/blob/main/assets/logo.chico.png">
+    <meta property="og:image" content="https://github.com/CarolinaGonzalo/CM-Alquileres/blob/main/assets/capturaSN.png">
     <meta property="og:url" content="https://cm-alquileres.vercel.app/pages/sobre-nosotrtos.html">
     <meta property="og:description" content="Gestión transparente, atención humana y experiencia en alquileres en José C. Paz. Trabajamos para tu tranquilidad.">
     <!-- bootstrap -->
