--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="owner" content="Carolina Gonalo">
     <!-- OG -->
     <meta property="og:title" content="CM Alquileres - Inicio">
-    <meta property="og:image" content="https://github.com/CarolinaGonzalo/CM-Alquileres/blob/main/assets/logo.chico.png">
+    <meta property="og:image" content="https://github.com/CarolinaGonzalo/CM-Alquileres/blob/main/assets/capturaAlquileres.png">
     <meta property="og:url" content="https://cm-alquileres.vercel.app/index.html">
     <meta property="og:description" content="Departamentos confortables, precios accesibles y atención personalizada en José C. Paz. Encontrá tu próximo hogar con nosotros.">
     <!-- bootstrap -->
