--- a/pages/alquileres.html
+++ b/pages/alquileres.html
@@ -12,7 +12,7 @@
     <meta name="owner" content="Carolina Gonalo">
   <!-- OG -->
     <meta property="og:title" content="CM Alquileres - Alquileres">
-    <meta property="og:image" content="https://github.com/CarolinaGonzalo/CM-Alquileres/blob/main/assets/logo.chico.png">
+    <meta property="og:image" content="https://github.com/CarolinaGonzalo/CM-Alquileres/blob/main/assets/capturaAlquileres.png">
     <meta property="og:url" content="https://cm-alquileres.vercel.app/pages/alquileres.html">
     <meta property="og:description" content="Departamentos en alquiler José C. Paz, Alquiler de monoambientes, Alquiler de 2 ambientes, Alquiler temporario José C. Paz, Alquiler sin garantía propietaria, Alquiler directo, Propiedades disponibles">
   <!-- bootstrap -->
