modificacion de ruta por cambio de nombre de archivo

--- a/pages/preguntas-frecuentes.html
+++ b/pages/preguntas-frecuentes.html
@@ -37,7 +37,7 @@
                         </li>
                         <li class="nav-item"> <a class="nav-link" href="./alquileres.html">Alquileres</a></li>
                         <li class="nav-item"> <a class="nav-link" href="./contacto.html">Contacto</a></li>
-                        <li class="nav-item"> <a class="nav-link active" href="./preguntas-precuentes.html">Preguntas
+                        <li class="nav-item"> <a class="nav-link active" href="./preguntas-frecuentes.html">Preguntas
                                 frecuentes</a></li>
                         <li class="nav-item"> <a class="nav-link" href="./sobre-nosotrtos.html">Sobres
                                 nosotros</a></li>
