--- a/pages/sobre-nosotrtos.html
+++ b/pages/sobre-nosotrtos.html
@@ -45,7 +45,7 @@
                         <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
                         <li class="nav-item"><a class="nav-link" href="./alquileres.html">Alquileres</a></li>
                         <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./preguntas-precuentes.html">Preguntas frecuentes</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./preguntas-frecuentes.html">Preguntas frecuentes</a></li>
                         <li class="nav-item"><a class="nav-link active" href="./sobre-nosotrtos.html">Sobre nosotros</a></li>
                     </ul>
 
