--- a/pages/alquileres.html
+++ b/pages/alquileres.html
@@ -44,7 +44,7 @@
             <li class="nav-item"> <a class="nav-link " aria-current="page" href="../index.html">Inicio</a></li>
             <li class="nav-item"> <a class="nav-link active" href="./alquileres.html">Alquileres</a></li>
             <li class="nav-item"> <a class="nav-link" href="./contacto.html">Contacto</a></li>
-            <li class="nav-item"> <a class="nav-link" href="./preguntas-precuentes.html">Preguntas
+            <li class="nav-item"> <a class="nav-link" href="./preguntas-frecuentes.html">Preguntas
                 frecuentes</a></li>
             <li class="nav-item"> <a class="nav-link" href="./sobre-nosotrtos.html">Sobres
                 nosotros</a></li>
