--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -36,7 +36,7 @@
                         </li>
                         <li class="nav-item"> <a class="nav-link" href="./alquileres.html">Alquileres</a></li>
                         <li class="nav-item"> <a class="nav-link active" href="./contacto.html">Contacto</a></li>
-                        <li class="nav-item"> <a class="nav-link" href="./preguntas-precuentes.html">Preguntas
+                        <li class="nav-item"> <a class="nav-link" href="./preguntas-frecuentes.html">Preguntas
                                 frecuentes</a></li>
                         <li class="nav-item"> <a class="nav-link" href="./sobre-nosotrtos.html">Sobres
                                 nosotros</a></li>
